@@ -1,3 +1,7 @@
+2011-08-18  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
+	* generic/tclIO.c [Bug 3096275] Sync fcopy buffers input.
+
 2011-08-18  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclUniData.c: [Bug 3393714] overflow in toupper delta
